Fix editor's readonly text color contrast

--- a/src/main/content/css/guides/editor.css
+++ b/src/main/content/css/guides/editor.css
@@ -19,7 +19,7 @@
 }
 
 .readonlyLines {
-  color: lightslategrey !important;
+  color: dimgray !important;
   /* cursor: not-allowed; */
 }
 
